Linking peptide ID's to LC-MS features.

--- a/src/ElutionProfileTool/Properties/Settings.settings
+++ b/src/ElutionProfileTool/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="Grade" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="Grader" Type="System.String" Scope="User">
+      <Value Profile="(Default)">enteryourname</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
