--- a/src/ElutionProfileTool/app.config
+++ b/src/ElutionProfileTool/app.config
@@ -13,6 +13,9 @@
       <setting name="Grade" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="Grader" serializeAs="String">
+        <value>enteryourname</value>
+      </setting>
     </ElutionProfileTool.Properties.Settings>
   </userSettings>
 </configuration>
