--- a/src/ElutionProfileTool/Racoon.csproj
+++ b/src/ElutionProfileTool/Racoon.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{7C3DE69F-04FF-4C3D-A606-20F43BFCE35F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ElutionProfileTool</RootNamespace>
-    <AssemblyName>ElutionProfileTool</AssemblyName>
+    <RootNamespace>Racoon</RootNamespace>
+    <AssemblyName>Racoon</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -135,10 +135,6 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DeconToolsTesting\DeconToolsTesting.csproj">
-      <Project>{7F6EA9C2-A56E-46EA-9E22-DDD5382A3874}</Project>
-      <Name>DeconToolsTesting</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MultiAlignCore\MultiAlignCore.csproj">
       <Project>{BDFA22C4-5822-4AA5-996E-6FDE57F7118B}</Project>
       <Name>MultiAlignCore</Name>
@@ -151,6 +147,9 @@
       <Project>{9409DE9B-F3F0-41AA-95F5-8BFD525F5669}</Project>
       <Name>PNNLControls</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="racoon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
