--- a/src/ElutionProfileTool/Racoon.csproj
+++ b/src/ElutionProfileTool/Racoon.csproj
@@ -149,7 +149,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="racoon.png" />
+    <Resource Include="racoon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
