--- a/src/ElutionProfileTool/Properties/Settings.settings
+++ b/src/ElutionProfileTool/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ElutionProfileTool.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Racoon.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="Grade" Type="System.Int32" Scope="User">
@@ -7,6 +7,15 @@
     </Setting>
     <Setting Name="Grader" Type="System.String" Scope="User">
       <Value Profile="(Default)">enteryourname</Value>
+    </Setting>
+    <Setting Name="LastXic" Type="System.String" Scope="User">
+      <Value Profile="(Default)">c:\</Value>
+    </Setting>
+    <Setting Name="Count" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Index" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
     </Setting>
   </Settings>
 </SettingsFile>
