--- a/src/ElutionProfileTool/app.config
+++ b/src/ElutionProfileTool/app.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Racoon.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="ElutionProfileTool.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -9,6 +10,23 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
   <userSettings>
+    <Racoon.Properties.Settings>
+      <setting name="Grade" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Grader" serializeAs="String">
+        <value>enteryourname</value>
+      </setting>
+      <setting name="LastXic" serializeAs="String">
+        <value>c:\</value>
+      </setting>
+      <setting name="Count" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Index" serializeAs="String">
+        <value>1</value>
+      </setting>
+    </Racoon.Properties.Settings>
     <ElutionProfileTool.Properties.Settings>
       <setting name="Grade" serializeAs="String">
         <value>0</value>
