--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -133,9 +133,6 @@
     <Compile Include="Algorithms\AlgorithmProvider.cs" />
     <Compile Include="Algorithms\Alignment\AlignmentOptions.cs" />
     <Compile Include="Algorithms\Alignment\DriftTimeAligner.cs" />
-    <Compile Include="Algorithms\Alignment\AsymmetricGaussianScanAdjuster.cs" />
-    <Compile Include="Algorithms\Alignment\ILcScanAdjuster.cs" />
-    <Compile Include="Algorithms\Alignment\LcScanAdjustment.cs" />
     <Compile Include="Algorithms\Alignment\MsMsAligner.cs" />
     <Compile Include="Algorithms\Alignment\MSMSSpectralClusterer.cs" />
     <Compile Include="Algorithms\Alignment\DriftTimeAlignmentOptions.cs" />
@@ -228,6 +225,7 @@
     <Compile Include="IO\ClusterExporterComposite.cs" />
     <Compile Include="IO\Factors\FactorFileReader.cs" />
     <Compile Include="IO\Factors\MultiAlignFactorSink.cs" />
+    <Compile Include="IO\Features\ParentSpectraFinder.cs" />
     <Compile Include="IO\Features\UMCClusterAbundanceSumCrossTabWriter.cs" />
     <Compile Include="IO\Features\XicFitWriter.cs" />
     <Compile Include="IO\Features\XicComparisonWriter.cs" />
