--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -223,10 +223,13 @@
     <Compile Include="Extensions\FeatureExtensions.cs" />
     <Compile Include="IO\Analysis\PeakMatchResultsWriter.cs" />
     <Compile Include="IO\ClusterExporterComposite.cs" />
+    <Compile Include="IO\CommandLineProcessor.cs" />
     <Compile Include="IO\Factors\FactorFileReader.cs" />
     <Compile Include="IO\Factors\MultiAlignFactorSink.cs" />
     <Compile Include="IO\Features\ParentSpectraFinder.cs" />
+    <Compile Include="IO\Features\UmcAdoDAO.cs" />
     <Compile Include="IO\Features\UMCClusterAbundanceSumCrossTabWriter.cs" />
+    <Compile Include="IO\Features\UmcClusterStreamWriter.cs" />
     <Compile Include="IO\Features\XicFitWriter.cs" />
     <Compile Include="IO\Features\XicComparisonWriter.cs" />
     <Compile Include="IO\Features\XicMsFeatureWriter.cs" />
@@ -370,7 +373,9 @@
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\UmcLight.hbm.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\UmcClusterLight.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\UmcClusterLight.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
