--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -226,6 +226,7 @@
     <Compile Include="IO\CommandLineProcessor.cs" />
     <Compile Include="IO\Factors\FactorFileReader.cs" />
     <Compile Include="IO\Factors\MultiAlignFactorSink.cs" />
+    <Compile Include="IO\Features\DatabaseIndexer.cs" />
     <Compile Include="IO\Features\ParentSpectraFinder.cs" />
     <Compile Include="IO\Features\UmcAdoDAO.cs" />
     <Compile Include="IO\Features\UMCClusterAbundanceSumCrossTabWriter.cs" />
@@ -246,7 +247,10 @@
     <Compile Include="IO\Features\UMCClusterMsmsWriter.cs" />
     <Compile Include="IO\Features\XicWriter.cs" />
     <Compile Include="IO\MTDB\APEMassTagDatabaseLoader.cs" />
+    <Compile Include="IO\IDatabaseServerLoader.cs" />
+    <Compile Include="IO\MTDB\MageDmsDatabaseLoader.cs" />
     <Compile Include="IO\MTDB\MassTagDatabaseLoaderCache.cs" />
+    <Compile Include="IO\MTDB\MassTagDatabaseLoaderFactory.cs" />
     <Compile Include="IO\PeptideScanWriter.cs" />
     <Compile Include="IO\Reports\IAnalysisReportGenerator.cs" />
     <Compile Include="IO\MTDB\MAGEMetaSampleDatabaseSink.cs" />
@@ -312,12 +316,10 @@
     <Compile Include="IO\InputFiles\MultiAlignFileInputReader.cs" />
     <Compile Include="IO\Factors\MAGEFactorAdaptor.cs" />
     <Compile Include="IO\Logger.cs" />
-    <Compile Include="IO\MTDB\AccessMassTagDatabaseLoader.cs" />
     <Compile Include="IO\MTDB\AnalysisMTDBSetupException.cs" />
     <Compile Include="IO\MTDB\IMTDBLoader.cs" />
     <Compile Include="IO\MTDB\MassTagDatabaseLoader.cs" />
     <Compile Include="IO\MTDB\MassTagDatabaseOptions.cs" />
-    <Compile Include="IO\MTDB\MassTagDatabaseType.cs" />
     <Compile Include="IO\MTDB\MTSMassTagDatabaseLoader.cs" />
     <Compile Include="IO\MTDB\MTSPeakMatchResultsWriter.cs" />
     <Compile Include="IO\MTDB\MTSSqlServerPeakMatchResultWriter.cs" />
