--- a/src/MultiAlignTestSuite/MultiAlignTestSuite.csproj
+++ b/src/MultiAlignTestSuite/MultiAlignTestSuite.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Algorithms\UMCClustering.cs" />
     <Compile Include="Algorithms\UMCFeatureFinding.cs" />
     <Compile Include="Algorithms\Xic\XicTest.cs" />
+    <Compile Include="IO\Databases\DatabaseIoTests.cs" />
     <Compile Include="IO\UMCFeatureDOATest.cs" />
     <Compile Include="IO\MSFeatureDOATest.cs" />
     <Compile Include="IO\MassTagDOATest.cs" />
