--- a/src/MultiAlignTestSuite/MultiAlignTestSuite.csproj
+++ b/src/MultiAlignTestSuite/MultiAlignTestSuite.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -78,16 +78,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Accord.Statistics.dll</HintPath>
     </Reference>
-    <Reference Include="AForge">
-      <HintPath>..\..\lib\AForge.dll</HintPath>
-    </Reference>
-    <Reference Include="MultiAlignEngine, Version=1.0.4729.30607, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="AForge, Version=2.2.4.0, Culture=neutral, PublicKeyToken=c1db6ff4eaa06aeb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\x64\MultiAlignEngine.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Accord.NET\Framework\Externals\AForge.NET\AForge.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
+    <Reference Include="MultiAlignEngine">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\$(Platform)\MultiAlignEngine.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="OxyPlot, Version=2013.1.52.1, Culture=neutral, PublicKeyToken=638079a8f0bd61e9, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\OxyPlot.dll</HintPath>
@@ -105,9 +104,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\x64\System.Data.SQLite.dll</HintPath>
+    <Reference Include="System.Data.SQLite">
+      <HintPath>..\..\lib\$(Platform)\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -123,14 +121,36 @@
     <Compile Include="Algorithms\MsMsClustering.cs" />
     <Compile Include="Algorithms\SpectralProcessing\SpectralAlignmentTests.cs" />
     <Compile Include="Algorithms\SpectralProcessing\SpectralComparisonTests.cs" />
-    <Compile Include="Algorithms\SpectralProcessing\BinaryProcessor.cs" />
-    <Compile Include="Algorithms\SpectralProcessing\TestSpectralLinking.cs" />
+    <Compile Include="Papers\Alignment\AlignmentMeasurement.cs" />
+    <Compile Include="Papers\Alignment\AnchorPointErrorMeasurement.cs" />
+    <Compile Include="Papers\Alignment\Data\AlignedFeatureData.cs" />
+    <Compile Include="Papers\Alignment\Data\AlignmentDataset.cs" />
+    <Compile Include="Papers\Alignment\Data\AnchorPoint.cs" />
+    <Compile Include="Papers\Alignment\FeatureAligner.cs" />
+    <Compile Include="Papers\Alignment\FeatureAnchorPointLinker.cs" />
+    <Compile Include="Papers\Alignment\FeatureLoader.cs" />
+    <Compile Include="Papers\Alignment\IO\AlignmentAnalysisWriterFactory.cs" />
+    <Compile Include="Papers\Alignment\IO\AlignmentFigureType.cs" />
+    <Compile Include="Papers\Alignment\IO\ReportFileUtility.cs" />
+    <Compile Include="Papers\Alignment\IO\SpectralWriterFigureTwo.cs" />
+    <Compile Include="Papers\Alignment\IO\SpectralWriterFigureOne.cs" />
+    <Compile Include="Papers\Alignment\PeptideAnchorPointFinder.cs" />
+    <Compile Include="Papers\Alignment\ISpectralAnalysisWriter.cs" />
+    <Compile Include="Papers\Alignment\MatchCountHistogramBuilder.cs" />
+    <Compile Include="Papers\Alignment\PeptideAnchorPointMatcher.cs" />
+    <Compile Include="Papers\Alignment\PeptideUtility.cs" />
+    <Compile Include="Papers\Alignment\SpectralAnalysis.cs" />
+    <Compile Include="Papers\Alignment\SpectralOptions.cs" />
+    <Compile Include="Papers\Alignment\SpectralUtilities.cs" />
+    <Compile Include="Papers\Alignment\SpectralAnchorPointFinder.cs" />
+    <Compile Include="Papers\Alignment\SSM\BaseSpectralAlignmentTest.cs" />
+    <Compile Include="Papers\Alignment\SSM\TestSpectralLinking.cs" />
     <Compile Include="Algorithms\UMCAlignment.cs" />
     <Compile Include="Algorithms\UMCClustering.cs" />
     <Compile Include="Algorithms\UMCFeatureFinding.cs" />
     <Compile Include="Algorithms\Xic\XicTest.cs" />
     <Compile Include="IO\Databases\DatabaseIoTests.cs" />
-    <Compile Include="IO\UMCClusterReconstruction.cs" />
+    <Compile Include="IO\UMCClusterIO.cs" />
     <Compile Include="IO\UMCFeatureDOATest.cs" />
     <Compile Include="IO\MSFeatureDOATest.cs" />
     <Compile Include="IO\MassTagDOATest.cs" />
@@ -139,8 +159,10 @@
     <Compile Include="IO\Parameters\XMLParameterFileTests.cs" />
     <Compile Include="IO\UMCReaderFailure.cs" />
     <Compile Include="IO\DataProviderTests.cs" />
+    <Compile Include="IO\UMCClusterReconstruction.cs" />
     <Compile Include="OHSU\ExtractClusters.cs" />
     <Compile Include="OHSU\LargeScaleClusterTests.cs" />
+    <Compile Include="Papers\Alignment\FigureGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
